@@ -3,22 +3,25 @@ package com.example;
 import org.junit.Test;
 import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.*;
+import java.util.Arrays;
+import java.util.List;
 
 public class CatTest {
 
     @Test
     public void testGetSoundReturnsMeow() {
-        Feline feline = mock(Feline.class);
-        Cat cat = new Cat(feline);
+        Cat cat = new Cat(new Feline());
         assertEquals("Мяу", cat.getSound());
     }
 
     @Test
     public void testGetFoodReturnsExpectedList() throws Exception {
         Feline feline = mock(Feline.class);
-        when(feline.eatMeat()).thenReturn(java.util.List.of("Рыба", "Мясо"));
+        when(feline.eatMeat()).thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
 
         Cat cat = new Cat(feline);
-        assertEquals(java.util.List.of("Рыба", "Мясо"), cat.getFood());
+        List<String> food = cat.getFood();
+
+        assertEquals(Arrays.asList("Животные", "Птицы", "Рыба"), food);
     }
 }
